--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Este Kata é um cópia do que foi demostrado em http://katas.softwarecraftsmanship.org/?p=80 pelo Corey Haines.
+This kata is a copy of which was demonstrated in http://katas.softwarecraftsmanship.org/?p=80 by Corey Haines.
 
-Obrigado Corey Haines
-Direitos para: Corey Haines
+Thanks Corey Haines
+Rights to: Corey Haines
