--- a/README
+++ b/README
@@ -2,3 +2,5 @@ This kata is a copy of which was demonstrated in http://katas.softwarecraftsmans
 
 Thanks Corey Haines
 Rights to: Corey Haines
+
+Type for me :D
