--- a/README
+++ b/README
@@ -3,4 +3,4 @@ This kata is a copy of which was demonstrated in http://katas.softwarecraftsmans
 Thanks Corey Haines
 Rights to: Corey Haines
 
-Type for me :D
+.Type for me :D
